--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.3",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
-    "@types/node": "^22.13.14",
+    "@types/axios": "^0.14.4",
+    "@types/node": "^22.13.17",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
